force-app/main/default/objects/Contract/Contract.object-meta.xml
<CustomObject>
    <!--
      Ficheiro minimo, so para atribuir o compact layout. Um objeto standard nao
      precisa de estar todo declarado aqui - o que nao esta neste ficheiro nao e
      tocado pelo deploy.
    -->
</CustomObject>