force-app/main/default/objects/Contract/fields/Comissao__c.field-meta.xml
<CustomField>
    <fullName>Comissao__c</fullName>
    <description>Percentagem de comissão acordada no contrato de mediação.</description>
    <label>Comissão (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>