force-app/main/default/objects/Contract/fields/Data_Envio_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_Envio_Contrato__c</fullName>
    <description>Quando o contrato foi enviado ao proprietário para assinar. O standard tem CustomerSignedDate mas não tem "enviado" — e é a diferença entre os dois que diz quem está a demorar.</description>
    <label>Data de Envio</label>
    <type>Date</type>
</CustomField>