force-app/main/default/objects/Contract/fields/Estado_Aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aprovacao__c</fullName>
    <description>Estado do pedido de aprovação da comissão.</description>
    <label>Aprovação da Comissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pendente</fullName><default>false</default><label>Pendente</label></value>
            <value><fullName>Aprovada</fullName><default>false</default><label>Aprovada</label></value>
            <value><fullName>Rejeitada</fullName><default>false</default><label>Rejeitada</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>