force-app/main/default/objects/Contract/fields/Exclusivo__c.field-meta.xml
<CustomField>
    <fullName>Exclusivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrato de mediação em regime de exclusividade.</description>
    <label>Exclusivo</label>
    <type>Checkbox</type>
</CustomField>