force-app/main/default/objects/Contract/fields/Imoveis_Total__c.field-meta.xml
<CustomField>
    <fullName>Imoveis_Total__c</fullName>
    <label>Imóveis (Total)</label>
    <summarizedField>Imovel__c.Id</summarizedField>
    <summaryForeignKey>Imovel__c.Contrato__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>