force-app/main/default/objects/Contract/fields/Imoveis_Vendidos__c.field-meta.xml
<CustomField>
    <fullName>Imoveis_Vendidos__c</fullName>
    <label>Imóveis Vendidos</label>
    <summaryFilterItems>
        <field>Imovel__c.Estado_Comercial__c</field>
        <operation>equals</operation>
        <value>Vendido</value>
    </summaryFilterItems>
    <summaryForeignKey>Imovel__c.Contrato__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>