force-app/main/default/objects/Contract/fields/Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Localizacao__c</fullName>
    <label>Localização</label>
    <length>150</length>
    <type>Text</type>
</CustomField>