force-app/main/default/objects/Contract/fields/Percentagem_Comercializada__c.field-meta.xml
<CustomField>
    <fullName>Percentagem_Comercializada__c</fullName>
    <description>Percentagem de frações do empreendimento já vendidas.</description>
    <formula>IF(Imoveis_Total__c = 0, 0, Imoveis_Vendidos__c / Imoveis_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Comercializada</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>