force-app/main/default/objects/Contract/fields/Regime__c.field-meta.xml
<CustomField>
    <fullName>Regime__c</fullName>
    <description>Regime de mediacao: particular ou empreendimento.</description>
    <label>Regime de Mediação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mediacao a Particular</fullName><default>true</default></value>
            <value><fullName>Comercializacao de Empreendimento</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>