force-app/main/default/objects/Contract/validationRules/Comissao_entre_0_e_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Comissao_entre_0_e_10</fullName>
    <active>true</active>
    <description>Protege a formula da comissao de erros de introducao (45 em vez de 4,5).</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Comissao__c)), OR(Comissao__c &lt;= 0, Comissao__c &gt; 0.10))</errorConditionFormula>
    <errorDisplayField>Comissao__c</errorDisplayField>
    <errorMessage>A comissão tem de estar entre 0% e 10%.</errorMessage>
</ValidationRule>