force-app/main/default/objects/Contract/listViews/Empreendimentos.listView-meta.xml
<ListView>
    <fullName>Empreendimentos</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Nome_Empreendimento__c</columns>
    <columns>Localizacao__c</columns>
    <columns>Imoveis_Total__c</columns>
    <columns>Imoveis_Vendidos__c</columns>
    <columns>Percentagem_Comercializada__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regime__c</field>
        <operation>equals</operation>
        <value>Comercializacao de Empreendimento</value>
    </filters>
    <label>🏢 Empreendimentos em Comercialização</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>